# SoundBox

./: 1533298318_func.h  1533298326_func.cpp  CMakeLists.txt  README.md  mp3_sample.cpp
src/: cli.cpp  cli.h  func.cpp  func.h  transform.cpp  transform.h  wav.cpp  wav.h  wav.hpp
